--- a/charities.html
+++ b/charities.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Zochonis</title>
+        <title>Areas of Focus</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="images/logos/small/symbol.png">
         <script src="js/js.js"></script>
@@ -33,67 +33,41 @@
         <!-- CONTENT -->
         <div class="main-content-div">
             <div class="content-text-div">
-                <h1>Trustees</h1>
-            </div>
-            <div class="content-trustees-div">
-                <div class="trustee-card">
-                    <div class="trustee-profile" onclick="showTrusteeInfo('trustee1')">
-                        <img class="trustee-img" src="images/profile.png">
-                        <h1>Paul Milner</h1>
-                    </div>
-                    <div class="trustee-info collapse" id="trustee1">
-                        Paul spent most of his working life with PZ Cussons in a variety of HR roles
-                        both in the UK and overseas.  He retired from the post of Global HR Director
-                        in 2011 and joined ZCT later the same year, becoming the Lead Trustee uppon
-                        the death of Sir John in 2013.  Paul was a governor of Stockport Grammar School
-                        between 2011 and 2021.
-                    </div>
-                </div>
-                <div class="trustee-card">
-                    <div class="trustee-profile" onclick="showTrusteeInfo('trustee2')">
-                        <img class="trustee-img" src="images/profile.png">
-                        <h1>Paul Evans</h1>
-                    </div>
-                    <div class="trustee-info collapse" id="trustee2">
-                        Paul obtained a PhD in Chemical Engineering from Imperial College, London in
-                        1986. He worked in Research & Development within PZ Cussons for over 32 years,
-                        leading development programmes in the U.K., Europe, Asia and Africa. He left
-                        the business in August 2020 with his final position as Research and Innovation
-                        Director and became a Trustee of the Zochonis Trust in July 2021.
-                    </div>
-                </div>
-                <div class="trustee-card">
-                    <div class="trustee-profile" onclick="showTrusteeInfo('trustee3')">
-                        <img class="trustee-img" src="images/profile.png">
-                        <h1>Graham Calder</h1>
-                    </div>
-                    <div class="trustee-info collapse" id="trustee3">
-                        After a successful career at Deloitte's, Graham joined PZ Cussons as Finance
-                        Director in 1995 and was appointed Deputy Chairman in 2006. He became a Trustee
-                        in 1998 and worked alongside Sir John.
-                    </div>
-                </div>
-            </div>
-            <div class="content-text-div">
-                <h1>Staff</h1>
-            </div>
-            <div class="content-trustees-div">
-                <div class="trustee-card">
-                    <div class="trustee-profile" onclick="showTrusteeInfo('trustee4')">
-                        <img class="trustee-img" src="images/profile.png">
-                        <h1>Marie Gallagher - Management Assistant</h1>
-                    </div>
-                    <div class="trustee-info collapse" id="trustee4">
-                        Marie has over 20 years experience with the Trust.  She starting working for Sir
-                        John Zochonis/the Trust in 2000 and worked for PZ Cussons for a number of years
-                        before that.  Marie is the main point of contact for the Trust.
-                    </div>
-                </div>
-            </div>
-            <div class="content-text-div">
-                Two of the Trustees meet weekly to review applications formally. The full board of Trustees
-                have two meetings, with advisors, at the half-year and full-year stages (AGM) The Zochonis
-                Charitable Trust's financial year runs from 6 April to 5 April the following year.
+                <h1>Areas of Focus</h1>
+                <h2>Education</h2>
+                <p>
+                    This is what a section with text looks like. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Duis nibh metus, mattis a mi in, cursus ullamcorper magna.
+                </p>
+                <div class="charities-container" id="education-charities"></div>
+
+                <h2>Children & Young People</h2>
+                <p>
+                    This is what a section with text looks like. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Duis nibh metus, mattis a mi in, cursus ullamcorper magna.
+                </p>
+                <div class="charities-container" id="childrenyoungpeople-charities"></div>
+
+                <h2>Health</h2>
+                <p>
+                    This is what a section with text looks like. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Duis nibh metus, mattis a mi in, cursus ullamcorper magna.
+                </p>
+                <div class="charities-container" id="health-charities"></div>
+
+                <h2>Social Equity</h2>
+                <p>
+                    This is what a section with text looks like. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Duis nibh metus, mattis a mi in, cursus ullamcorper magna.
+                </p>
+                <div class="charities-container" id="socialequity-charities"></div>
+
+                <h2>Overseas Charities</h2>
+                <p>
+                    This is what a section with text looks like. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Duis nibh metus, mattis a mi in, cursus ullamcorper magna.
+                </p>
+                <div class="charities-container" id="overseas-charities"></div>
             </div>
         </div>
 
