--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="trustees.html">Who We Are</a></li>
                     <li><a href="#">Purpose</a></li>
-                    <li><a href="#">Areas of Focus</a></li>
+                    <li><a href="charities.html">Areas of Focus</a></li>
                     <li><a href="#">Overseas Support</a></li>
                     <li><a href="#">How to Apply</a></li>
                 </ul>
@@ -78,6 +78,19 @@
                     consectetur varius eleifend. Duis sed tortor nec neque aliquam auctor nec quis leo. Fusce a viverra arcu.
                     Maecenas magna ex, feugiat id nulla mattis, pretium finibus elit.
                 </p>
+            </div>
+            <div class="content-scroll-div">
+                <h2>Supported Charities</h2>
+                <p>
+                    This is what a section with text looks like. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Duis nibh metus, mattis a mi in, cursus ullamcorper magna.
+                </p>
+                <div class="scroll-container">
+                    <div class="scroll-outer-div">
+                        <div class="scroll-gradient-div"></div>
+                        <div class="scroll-inner-div" id="scroll-inner-div"></div>
+                    </div>
+                </div>
             </div>
             <div class="content-img-div">
                 <div class="img-outer-div"><div class="img-inner-div" style="background-image: url(images/wheel/2.jpg)"></div></div>
@@ -170,30 +183,6 @@
                 </ul>
             </div>
         </div>
-
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
 </html>
-<script>
-    $(window).on('resize', function() {
-        if (document.getElementById("nav-div")) {
-            if($(window).width() > 700) {
-                $('#nav-div').removeClass('collapse');
-            }else{
-                $('#nav-div').addClass('collapse');
-                $('#nav-div').removeClass('show');
-            }
-        }
-    })
-
-    window.onload = function() {
-        if (document.getElementById("nav-div")) {
-            if($(window).width() > 700) {
-                $('#nav-div').removeClass('collapse');
-            }else{
-                $('#nav-div').addClass('collapse');
-                $('#nav-div').removeClass('show');
-            }
-        }
-    }
-</script>
