Added banner options and improved logos
- Added new banner options
- Added logo to the nav bar
- Updated low quality charity logo images and added transparent background
- Improved scrolling logo wheel

--- a/charities.html
+++ b/charities.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Areas of Focus</title>
+        <title>The Zochonis Charitable Trust | Areas of Focus</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="images/logos/small/symbol.png">
         <script src="js/js.js"></script>
@@ -15,6 +15,7 @@
 
         <!-- HEADER -->
         <div class="header-div">
+            <div class="nav-logo-div"><img class="nav-logo" src="images/logos/large/symbol.png"></div>
             <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-list nav-menu-img show700" viewBox="0 0 16 16"  onclick="$('#nav-div').collapse('toggle')">
                 <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
             </svg>
@@ -33,41 +34,92 @@
         <!-- CONTENT -->
         <div class="main-content-div">
             <div class="content-text-div">
-                <h1>Areas of Focus</h1>
-                <h2>Education</h2>
+                <h1>Education</h1>
                 <p>
                     This is what a section with text looks like. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Duis nibh metus, mattis a mi in, cursus ullamcorper magna.
                 </p>
-                <div class="charities-container" id="education-charities"></div>
+                <div class="charities-container" id="education-charities">
+                    <img class="scroll-img" src="images/logo_wheel/education/logo0.png">
+                    <img class="scroll-img" src="images/logo_wheel/education/logo1.png">
+                    <img class="scroll-img" src="images/logo_wheel/education/logo2.png">
+                    <img class="scroll-img" src="images/logo_wheel/education/logo3.png">
+                    <img class="scroll-img" src="images/logo_wheel/education/logo4.png">
+                    <img class="scroll-img" src="images/logo_wheel/education/logo5.png">
+                    <img class="scroll-img" src="images/logo_wheel/education/logo6.png">
+                    <img class="scroll-img" src="images/logo_wheel/education/logo7.png">
+                    <img class="scroll-img" src="images/logo_wheel/education/logo8.png">
+                    <img class="scroll-img" src="images/logo_wheel/education/logo9.png">
+                    <img class="scroll-img" src="images/logo_wheel/education/logo10.png">
+                </div>
 
-                <h2>Children & Young People</h2>
+                <h1>Children & Young People</h1>
                 <p>
                     This is what a section with text looks like. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Duis nibh metus, mattis a mi in, cursus ullamcorper magna.
                 </p>
-                <div class="charities-container" id="childrenyoungpeople-charities"></div>
+                <div class="charities-container" id="childrenyoungpeople-charities">
+                    <img class="scroll-img" src="images/logo_wheel/childrenyoungpeople/logo0.png">
+                    <img class="scroll-img" src="images/logo_wheel/childrenyoungpeople/logo1.png">
+                    <img class="scroll-img" src="images/logo_wheel/childrenyoungpeople/logo2.png">
+                    <img class="scroll-img" src="images/logo_wheel/childrenyoungpeople/logo3.png">
+                    <img class="scroll-img" src="images/logo_wheel/childrenyoungpeople/logo4.png">
+                </div>
 
-                <h2>Health</h2>
+                <h1>Health</h1>
                 <p>
                     This is what a section with text looks like. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Duis nibh metus, mattis a mi in, cursus ullamcorper magna.
                 </p>
-                <div class="charities-container" id="health-charities"></div>
+                <div class="charities-container" id="health-charities">
+                    <img class="scroll-img" src="images/logo_wheel/health/logo0.png">
+                    <img class="scroll-img" src="images/logo_wheel/health/logo1.png">
+                    <img class="scroll-img" src="images/logo_wheel/health/logo2.png">
+                    <img class="scroll-img" src="images/logo_wheel/health/logo3.png">
+                    <img class="scroll-img" src="images/logo_wheel/health/logo4.png">
+                    <img class="scroll-img" src="images/logo_wheel/health/logo5.png">
+                    <img class="scroll-img" src="images/logo_wheel/health/logo6.png">
+                    <img class="scroll-img" src="images/logo_wheel/health/logo7.png">
+                    <img class="scroll-img" src="images/logo_wheel/health/logo8.png">
+                    <img class="scroll-img" src="images/logo_wheel/health/logo9.png">
+                    <img class="scroll-img" src="images/logo_wheel/health/logo10.png">
+                </div>
 
-                <h2>Social Equity</h2>
+                <h1>Social Equity</h1>
                 <p>
                     This is what a section with text looks like. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Duis nibh metus, mattis a mi in, cursus ullamcorper magna.
                 </p>
-                <div class="charities-container" id="socialequity-charities"></div>
+                <div class="charities-container" id="socialequity-charities">
+                    <img class="scroll-img" src="images/logo_wheel/socialequity/logo0.png">
+                    <img class="scroll-img" src="images/logo_wheel/socialequity/logo1.png">
+                    <img class="scroll-img" src="images/logo_wheel/socialequity/logo2.png">
+                    <img class="scroll-img" src="images/logo_wheel/socialequity/logo3.png">
+                    <img class="scroll-img" src="images/logo_wheel/socialequity/logo4.png">
+                    <img class="scroll-img" src="images/logo_wheel/socialequity/logo5.png">
+                    <img class="scroll-img" src="images/logo_wheel/socialequity/logo6.png">
+                    <img class="scroll-img" src="images/logo_wheel/socialequity/logo7.png">
+                    <img class="scroll-img" src="images/logo_wheel/socialequity/logo8.png">
+                    <img class="scroll-img" src="images/logo_wheel/socialequity/logo9.png">
+                </div>
 
-                <h2>Overseas Charities</h2>
+                <h1>Overseas Charities</h1>
                 <p>
                     This is what a section with text looks like. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Duis nibh metus, mattis a mi in, cursus ullamcorper magna.
                 </p>
-                <div class="charities-container" id="overseas-charities"></div>
+                <div class="charities-container" id="overseas-charities">
+                    <img class="scroll-img" src="images/logo_wheel/overseas/logo0.png">
+                    <img class="scroll-img" src="images/logo_wheel/overseas/logo1.png">
+                    <img class="scroll-img" src="images/logo_wheel/overseas/logo2.png">
+                    <img class="scroll-img" src="images/logo_wheel/overseas/logo3.png">
+                    <img class="scroll-img" src="images/logo_wheel/overseas/logo4.png">
+                    <img class="scroll-img" src="images/logo_wheel/overseas/logo5.png">
+                    <img class="scroll-img" src="images/logo_wheel/overseas/logo6.png">
+                    <img class="scroll-img" src="images/logo_wheel/overseas/logo7.png">
+                    <p>The Christian Aid logo is reproduced with its permission.</p>
+                </div>
+                
             </div>
         </div>
 
