--- a/trustees.html
+++ b/trustees.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Zochonis</title>
+        <title>The Zochonis Charitable Trust | Who We Are</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="images/logos/small/symbol.png">
         <script src="js/js.js"></script>
@@ -15,6 +15,7 @@
 
         <!-- HEADER -->
         <div class="header-div">
+            <div class="nav-logo-div"><img class="nav-logo" src="images/logos/large/symbol.png"></div>
             <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-list nav-menu-img show700" viewBox="0 0 16 16"  onclick="$('#nav-div').collapse('toggle')">
                 <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
             </svg>
