Updated banner, text, pages

--- a/charities.html
+++ b/charities.html
@@ -23,10 +23,10 @@
                 <ul class="nav-ul">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="trustees.html">Who We Are</a></li>
-                    <li><a href="#">Purpose</a></li>
+                    <li><a href="purpose.html">Purpose</a></li>
                     <li><a href="charities.html">Areas of Focus</a></li>
-                    <li><a href="#">Overseas Support</a></li>
-                    <li><a href="#">How to Apply</a></li>
+                    <li><a href="overseas.html">Overseas Support</a></li>
+                    <li><a href="apply.html">How to Apply</a></li>
                 </ul>
             </div>
         </div>
@@ -36,88 +36,71 @@
             <div class="content-text-div">
                 <h1>Education</h1>
                 <p>
-                    This is what a section with text looks like. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Duis nibh metus, mattis a mi in, cursus ullamcorper magna.
+                    Each year the Trust donates a substantial portion of its income to schools, universities and learning institutions, which provide a wide range of wonderful educational opportunities for children of all ages.  
+                </p><p>
+                    ZCT funds secondary school bursaries making some of the best education in the Greater Manchester area accessible to bright children from low-income families.
+                </p><p>
+                    In addition, the Trust supports a wide range of artistic, historical and scientific endeavours through outreach programmes to provide forward thinking and innovative learning experiences for young people.  These culturally enriching programmes foster creativity, insight and self-confidence.
                 </p>
                 <div class="charities-container" id="education-charities">
-                    <img class="scroll-img" src="images/logo_wheel/education/logo0.png">
-                    <img class="scroll-img" src="images/logo_wheel/education/logo1.png">
-                    <img class="scroll-img" src="images/logo_wheel/education/logo2.png">
-                    <img class="scroll-img" src="images/logo_wheel/education/logo3.png">
-                    <img class="scroll-img" src="images/logo_wheel/education/logo4.png">
-                    <img class="scroll-img" src="images/logo_wheel/education/logo5.png">
-                    <img class="scroll-img" src="images/logo_wheel/education/logo6.png">
-                    <img class="scroll-img" src="images/logo_wheel/education/logo7.png">
-                    <img class="scroll-img" src="images/logo_wheel/education/logo8.png">
-                    <img class="scroll-img" src="images/logo_wheel/education/logo9.png">
-                    <img class="scroll-img" src="images/logo_wheel/education/logo10.png">
+                    <div><img src="images/logo_wheel/education/logo0.png"></div>
+                    <div><img src="images/logo_wheel/education/logo1.png"></div>
+                    <div><img src="images/logo_wheel/education/logo2.png"></div>
+                    <div><img src="images/logo_wheel/education/logo3.png"></div>
+                    <div><img src="images/logo_wheel/education/logo4.png"></div>
+                    <div><img src="images/logo_wheel/education/logo5.png"></div>
+                    <div><img src="images/logo_wheel/education/logo6.png"></div>
+                    <div><img src="images/logo_wheel/education/logo7.png"></div>
+                    <div><img src="images/logo_wheel/education/logo8.png"></div>
+                    <div><img src="images/logo_wheel/education/logo9.png"></div>
+                    <div><img src="images/logo_wheel/education/logo10.png"></div>
                 </div>
 
                 <h1>Children & Young People</h1>
                 <p>
-                    This is what a section with text looks like. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Duis nibh metus, mattis a mi in, cursus ullamcorper magna.
+                    The Trust recognises that there are a number of issues facing young people today such as gaining employment, managing mental health challenges, body image anxieties and social media pressures.  With this in mind, ZCT supports a number of charities whose work specifically focuses on helping young people meet such challenges and to fulfil their potential.
                 </p>
                 <div class="charities-container" id="childrenyoungpeople-charities">
-                    <img class="scroll-img" src="images/logo_wheel/childrenyoungpeople/logo0.png">
-                    <img class="scroll-img" src="images/logo_wheel/childrenyoungpeople/logo1.png">
-                    <img class="scroll-img" src="images/logo_wheel/childrenyoungpeople/logo2.png">
-                    <img class="scroll-img" src="images/logo_wheel/childrenyoungpeople/logo3.png">
-                    <img class="scroll-img" src="images/logo_wheel/childrenyoungpeople/logo4.png">
+                    <div><img src="images/logo_wheel/childrenyoungpeople/logo0.png"></div>
+                    <div><img src="images/logo_wheel/childrenyoungpeople/logo1.png"></div>
+                    <div><img src="images/logo_wheel/childrenyoungpeople/logo2.png"></div>
+                    <div><img src="images/logo_wheel/childrenyoungpeople/logo3.png"></div>
+                    <div><img src="images/logo_wheel/childrenyoungpeople/logo4.png"></div>
                 </div>
 
                 <h1>Health</h1>
                 <p>
-                    This is what a section with text looks like. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Duis nibh metus, mattis a mi in, cursus ullamcorper magna.
+                    Healthcare is both a complex and diverse area and naturally ZCT’s grant making reflects this with money given to medical research, hospitals and to organisations who seek to improve the lives of those who need help the most and those who provide support for them.
                 </p>
                 <div class="charities-container" id="health-charities">
-                    <img class="scroll-img" src="images/logo_wheel/health/logo0.png">
-                    <img class="scroll-img" src="images/logo_wheel/health/logo1.png">
-                    <img class="scroll-img" src="images/logo_wheel/health/logo2.png">
-                    <img class="scroll-img" src="images/logo_wheel/health/logo3.png">
-                    <img class="scroll-img" src="images/logo_wheel/health/logo4.png">
-                    <img class="scroll-img" src="images/logo_wheel/health/logo5.png">
-                    <img class="scroll-img" src="images/logo_wheel/health/logo6.png">
-                    <img class="scroll-img" src="images/logo_wheel/health/logo7.png">
-                    <img class="scroll-img" src="images/logo_wheel/health/logo8.png">
-                    <img class="scroll-img" src="images/logo_wheel/health/logo9.png">
-                    <img class="scroll-img" src="images/logo_wheel/health/logo10.png">
+                    <div><img src="images/logo_wheel/health/logo0.png"></div>
+                    <div><img src="images/logo_wheel/health/logo1.png"></div>
+                    <div><img src="images/logo_wheel/health/logo2.png"></div>
+                    <div><img src="images/logo_wheel/health/logo3.png"></div>
+                    <div><img src="images/logo_wheel/health/logo4.png"></div>
+                    <div><img src="images/logo_wheel/health/logo5.png"></div>
+                    <div><img src="images/logo_wheel/health/logo6.png"></div>
+                    <div><img src="images/logo_wheel/health/logo7.png"></div>
+                    <div><img src="images/logo_wheel/health/logo8.png"></div>
+                    <div><img src="images/logo_wheel/health/logo9.png"></div>
+                    <div><img src="images/logo_wheel/health/logo10.png"></div>
                 </div>
 
                 <h1>Social Equity</h1>
                 <p>
-                    This is what a section with text looks like. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Duis nibh metus, mattis a mi in, cursus ullamcorper magna.
+                    The Trust has consistently provided support to some of the most deprived and vulnerable people in Greater Manchester.  The work of the charities that it supports varies enormously, ranging from the prevention of human trafficking to alleviating elements of poverty and homelessness.
                 </p>
                 <div class="charities-container" id="socialequity-charities">
-                    <img class="scroll-img" src="images/logo_wheel/socialequity/logo0.png">
-                    <img class="scroll-img" src="images/logo_wheel/socialequity/logo1.png">
-                    <img class="scroll-img" src="images/logo_wheel/socialequity/logo2.png">
-                    <img class="scroll-img" src="images/logo_wheel/socialequity/logo3.png">
-                    <img class="scroll-img" src="images/logo_wheel/socialequity/logo4.png">
-                    <img class="scroll-img" src="images/logo_wheel/socialequity/logo5.png">
-                    <img class="scroll-img" src="images/logo_wheel/socialequity/logo6.png">
-                    <img class="scroll-img" src="images/logo_wheel/socialequity/logo7.png">
-                    <img class="scroll-img" src="images/logo_wheel/socialequity/logo8.png">
-                    <img class="scroll-img" src="images/logo_wheel/socialequity/logo9.png">
-                </div>
-
-                <h1>Overseas Charities</h1>
-                <p>
-                    This is what a section with text looks like. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Duis nibh metus, mattis a mi in, cursus ullamcorper magna.
-                </p>
-                <div class="charities-container" id="overseas-charities">
-                    <img class="scroll-img" src="images/logo_wheel/overseas/logo0.png">
-                    <img class="scroll-img" src="images/logo_wheel/overseas/logo1.png">
-                    <img class="scroll-img" src="images/logo_wheel/overseas/logo2.png">
-                    <img class="scroll-img" src="images/logo_wheel/overseas/logo3.png">
-                    <img class="scroll-img" src="images/logo_wheel/overseas/logo4.png">
-                    <img class="scroll-img" src="images/logo_wheel/overseas/logo5.png">
-                    <img class="scroll-img" src="images/logo_wheel/overseas/logo6.png">
-                    <img class="scroll-img" src="images/logo_wheel/overseas/logo7.png">
-                    <p>The Christian Aid logo is reproduced with its permission.</p>
+                    <div><img src="images/logo_wheel/socialequity/logo0.png"></div>
+                    <div><img src="images/logo_wheel/socialequity/logo1.png"></div>
+                    <div><img src="images/logo_wheel/socialequity/logo2.png"></div>
+                    <div><img src="images/logo_wheel/socialequity/logo3.png"></div>
+                    <div><img src="images/logo_wheel/socialequity/logo4.png"></div>
+                    <div><img src="images/logo_wheel/socialequity/logo5.png"></div>
+                    <div><img src="images/logo_wheel/socialequity/logo6.png"></div>
+                    <div><img src="images/logo_wheel/socialequity/logo7.png"></div>
+                    <div><img src="images/logo_wheel/socialequity/logo8.png"></div>
+                    <div><img src="images/logo_wheel/socialequity/logo9.png"></div>
                 </div>
                 
             </div>
@@ -148,7 +131,7 @@
             <div>
                 <h1>Contact Us</h1>
                 <ul class="footer-ul">
-                    <li>PZ Cussons</li>
+                    <li>The Zochonis Charitable Trust</li>
                     <li>Manchester Business Park</li>
                     <li>3500 Aviator Way</li>
                     <li>Manchester</li>
