--- a/trustees.html
+++ b/trustees.html
@@ -23,10 +23,10 @@
                 <ul class="nav-ul">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="trustees.html">Who We Are</a></li>
-                    <li><a href="#">Purpose</a></li>
+                    <li><a href="purpose.html">Purpose</a></li>
                     <li><a href="charities.html">Areas of Focus</a></li>
-                    <li><a href="#">Overseas Support</a></li>
-                    <li><a href="#">How to Apply</a></li>
+                    <li><a href="overseas.html">Overseas Support</a></li>
+                    <li><a href="apply.html">How to Apply</a></li>
                 </ul>
             </div>
         </div>
@@ -39,7 +39,7 @@
             <div class="content-trustees-div">
                 <div class="trustee-card">
                     <div class="trustee-profile" onclick="showTrusteeInfo('trustee1')">
-                        <img class="trustee-img" src="images/profile.png">
+                        <img class="trustee-img" src="images/paul_m.png">
                         <h1>Paul Milner</h1>
                     </div>
                     <div class="trustee-info collapse" id="trustee1">
@@ -52,7 +52,7 @@
                 </div>
                 <div class="trustee-card">
                     <div class="trustee-profile" onclick="showTrusteeInfo('trustee2')">
-                        <img class="trustee-img" src="images/profile.png">
+                        <img class="trustee-img" src="images/paul_e.png">
                         <h1>Paul Evans</h1>
                     </div>
                     <div class="trustee-info collapse" id="trustee2">
@@ -65,7 +65,7 @@
                 </div>
                 <div class="trustee-card">
                     <div class="trustee-profile" onclick="showTrusteeInfo('trustee3')">
-                        <img class="trustee-img" src="images/profile.png">
+                        <img class="trustee-img" src="images/graham.png">
                         <h1>Graham Calder</h1>
                     </div>
                     <div class="trustee-info collapse" id="trustee3">
@@ -81,7 +81,7 @@
             <div class="content-trustees-div">
                 <div class="trustee-card">
                     <div class="trustee-profile" onclick="showTrusteeInfo('trustee4')">
-                        <img class="trustee-img" src="images/profile.png">
+                        <img class="trustee-img" src="images/marie.png">
                         <h1>Marie Gallagher - Management Assistant</h1>
                     </div>
                     <div class="trustee-info collapse" id="trustee4">
@@ -123,7 +123,7 @@
             <div>
                 <h1>Contact Us</h1>
                 <ul class="footer-ul">
-                    <li>PZ Cussons</li>
+                    <li>The Zochonis Charitable Trust</li>
                     <li>Manchester Business Park</li>
                     <li>3500 Aviator Way</li>
                     <li>Manchester</li>
